<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/main_layout_default">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal|top"
        android:gravity="center_horizontal"
        android:text="@string/custom_setup_title"
        android:textAppearance="@android:style/TextAppearance.Large" />

    <TextView
        android:id="@+id/textView2"
        style="@style/text_default"
        android:layout_gravity="center_vertical"
        android:gravity="center|center_horizontal"
        android:text="@string/game_mode"
        android:textAppearance="@android:style/TextAppearance.Medium" />

    <Spinner
        android:id="@+id/gameModeSpinner"
        style="@style/spinner_custom_game" />

    <TextView
        android:id="@+id/textView3"
        style="@style/text_default"
        android:layout_gravity="start|center_vertical"
        android:gravity="center_horizontal"
        android:text="@string/game_question"
        android:textAppearance="@android:style/TextAppearance.Medium" />

    <Spinner
        android:id="@+id/spinner_question"
        style="@style/spinner_custom_game"
        android:entries="@array/gameType"
        android:prompt="@string/game_type_capital" />

    <TextView
        android:id="@+id/textView4"
        style="@style/text_default"
        android:layout_gravity="start"
        android:text="@string/game_answer"
        android:textAppearance="@android:style/TextAppearance.Medium" />

    <Spinner
        android:id="@+id/spinner_answer"
        style="@style/spinner_custom_game"
        android:entries="@array/gameType"
        android:prompt="@string/game_type_country" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView5"
            style="@style/text_default"
            android:layout_height="28dp"
            android:layout_gravity="center"
            android:text="@string/game_setup_when_ready" />

        <Button
            android:id="@+id/startGameButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/start_game" />

    </LinearLayout>

    <TextView
        android:id="@+id/exampleText"
        style="@style/text_default"
        android:layout_gravity="center"
        android:gravity="center_horizontal"
        android:lines="2"
        android:text="@string/question_example"
        android:visibility="gone" />

    <Button
        android:id="@+id/custom_setup_help_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal|end"
        android:text="@string/help" />

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:ads="http://schemas.android.com/apk/res-auto"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:gravity="center|bottom|center_horizontal"
        android:orientation="vertical">

        <com.google.android.gms.ads.AdView
            android:id="@+id/adView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            ads:adSize="BANNER"
            ads:adUnitId="@string/adUnitId" />
    </LinearLayout>

</LinearLayout>