<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_background"
    android:foregroundGravity="fill|top">

    <TableLayout
        android:id="@+id/linear_accelerationXTable"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="top"
        android:gravity="top"
        android:orientation="vertical"
        android:shrinkColumns="*"
        android:stretchColumns="*">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="top"
            android:layout_marginBottom="2dp"
            android:gravity="fill|top">

            <TextView
                android:id="@+id/appTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="top"
                android:layout_span="4"
                android:gravity="center|center_horizontal|top"
                android:text="@string/app_name"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@color/title"
                android:textSize="20sp"
                android:textStyle="bold" />

        </TableRow>

        <TableRow style="@style/menu_row_style">

            <Button
                android:id="@+id/quickGameButton"
                style="@style/menu_button_style"
                android:layout_span="2"
                android:drawableLeft="@drawable/flag_green"
                android:drawableStart="@drawable/flag_green"
                android:text="@string/quick_game_button_title"
                android:textStyle="bold" />

            <Button
                android:id="@+id/customGameButton"
                style="@style/menu_button_style"
                android:layout_span="2"
                android:drawableLeft="@drawable/flag_yellow"
                android:drawableStart="@drawable/flag_yellow"
                android:text="@string/custom_game_button_title"
                android:textStyle="bold" />

        </TableRow>

        <TableRow style="@style/menu_row_style">

            <Button
                android:id="@+id/tutorialButton"
                style="@style/menu_button_style"
                android:layout_span="2"
                android:drawableLeft="@drawable/book_open"
                android:drawableStart="@drawable/book_open"
                android:text="@string/tutorial_button_title" />

            <Button
                android:id="@+id/highScoreButton"
                style="@style/menu_button_style"
                android:layout_span="2"
                android:drawableLeft="@drawable/medal_gold_2"
                android:drawableStart="@drawable/medal_gold_2"
                android:text="@string/hs_button_title" />


        </TableRow>

        <TableRow style="@style/menu_row_style">

            <Button
                android:id="@+id/countriesInfoButton"
                style="@style/menu_button_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_span="2"
                android:drawableLeft="@drawable/book_addresses"
                android:drawableStart="@drawable/book_addresses"
                android:text="@string/country_list_title" />

            <Button
                android:id="@+id/aboutGameButton"
                style="@style/menu_button_style"
                android:layout_span="2"
                android:drawableLeft="@drawable/information"
                android:drawableStart="@drawable/information"
                android:text="@string/about" />

        </TableRow>

        <TableRow style="@style/menu_row_style">

            <Button
                android:id="@+id/settingsButton"
                style="@style/menu_button_style"
                android:layout_span="4"
                android:drawableLeft="@drawable/wrench_orange"
                android:drawableStart="@drawable/wrench_orange"
                android:text="@string/options_button_title" />

        </TableRow>

        <TextView
            android:id="@+id/version"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:text="@string/unknown"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@color/version" />

        <TextView
            android:id="@+id/betaText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal|bottom"
            android:text="@string/advert_title"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@color/separator_shadow" />


        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:ads="http://schemas.android.com/apk/res-auto"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:gravity="center|bottom|center_horizontal"
            android:orientation="vertical">

            <com.google.android.gms.ads.AdView
                android:id="@+id/adView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                ads:adSize="BANNER"
                ads:adUnitId="@string/adUnitId" />
        </LinearLayout>

        <TextView
            android:id="@+id/randomMessage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal|bottom"
            android:text="@string/beta"
            android:textColor="@color/bonus_score_shadow" />


    </TableLayout>

</ScrollView>

