<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/adventure_background"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_background"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center|center_horizontal"
        android:orientation="horizontal">

        <TextView
            style="@style/separator"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/score_title"
            style="@style/game_info_style"
            android:text="@string/game_score" />

        <TextView
            android:id="@+id/current_score"
            style="@style/game_info_style"
            android:text="" />

        <TextView
            android:id="@+id/bonus_score"
            style="@style/game_info_style"
            android:text="" />


        <TextView
            style="@style/separator"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/lvl_title"
            style="@style/game_info_style"
            android:text="@string/level_title" />

        <TextView
            android:id="@+id/current_lvl"
            style="@style/game_info_style"
            android:text="@string/zeroByZero" />

        <TextView
            style="@style/separator"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/time_elapsed_title"
            style="@style/game_info_style"
            android:text="@string/time_elapsed" />

        <TextView
            android:id="@+id/time_elapsed_value"
            style="@style/game_info_style"
            android:text="@string/zero" />

        <TextView
            android:id="@+id/textView"
            style="@style/separator"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />


    </LinearLayout>


    <LinearLayout
        android:id="@+id/life_mana_ll"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center|center_horizontal"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/life_title"
            style="@style/game_info_style"
            android:text="@string/health" />

        <TextView
            android:id="@+id/current_life"
            style="@style/game_info_style"
            android:text="@string/zero" />

        <TextView
            android:id="@+id/bonus_life"
            style="@style/game_info_style"
            android:text="" />

        <TextView

            style="@style/separator"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/correct_title"
            style="@style/game_info_style"
            android:text="@string/corrects" />

        <TextView
            android:id="@+id/correct_value"
            style="@style/game_info_style"
            android:text="@string/zero" />

        <TextView

            style="@style/separator"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/mistakes_title"
            style="@style/game_info_style"
            android:text="@string/mistakes" />

        <TextView
            android:id="@+id/mistakes_value"
            style="@style/game_info_style"
            android:text="@string/zero" />

    </LinearLayout>

    <TableLayout
        android:id="@+id/linear_accelerationXTable"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_gravity="center"
        android:shrinkColumns="*"
        android:stretchColumns="*">

        <TableRow>


            <TextView
                android:id="@+id/question_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_span="4"
                android:gravity="center|center_horizontal"
                android:padding="2dp"
                android:shadowColor="@color/value_shadow"
                android:shadowDx="0"
                android:shadowDy="0"
                android:shadowRadius="4"
                android:text="@string/question_title"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/value"
                android:textSize="24sp"
                android:textStyle="bold" />

        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:layout_span="4"
                android:contentDescription="@string/flag_description"
                android:maxWidth="120dp"
                android:src="@drawable/poland" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow1"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <TextView
                android:id="@+id/questionText"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_span="4"
                android:gravity="center|center_horizontal"
                android:padding="2dp"
                android:shadowColor="@color/value_shadow"
                android:shadowDx="0"
                android:shadowDy="0"
                android:shadowRadius="4"
                android:text="@string/question"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@color/value"
                android:textSize="24sp"
                android:textStyle="bold" />
        </TableRow>


        <TableRow style="@style/answer_buttons_row_style">


            <Button
                android:id="@+id/answer1"
                style="@style/answer_button_style"
                android:layout_span="2"
                android:text="@string/zero" />

            <Button
                android:id="@+id/answer2"
                style="@style/answer_button_style"
                android:layout_span="2"
                android:text="@string/zero" />

        </TableRow>

        <TableRow style="@style/answer_buttons_row_style">

            <Button
                android:id="@+id/answer3"
                style="@style/answer_button_style"
                android:layout_span="2"
                android:text="@string/zero" />

            <Button
                android:id="@+id/answer4"
                style="@style/answer_button_style"
                android:layout_span="2"
                android:text="@string/zero" />

        </TableRow>

        <TableRow
            android:id="@+id/continent_row"
            style="@style/answer_buttons_row_style"
            android:visibility="gone">

            <Button
                android:id="@+id/answer5"
                style="@style/answer_button_style"
                android:layout_span="2"
                android:text="@string/zero" />

            <Button
                android:id="@+id/answer6"
                style="@style/answer_button_style"
                android:layout_span="2"
                android:text="@string/zero" />

        </TableRow>


        <TableRow
            android:gravity="bottom"
            android:paddingTop="15dp">

            <TextView
                android:id="@+id/levelStatus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_span="4"
                android:gravity="end"
                android:shadowDx="0"
                android:shadowDy="0"
                android:shadowRadius="3"
                android:text=""
                android:textColor="@color/status"
                android:textSize="14sp" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:gravity="center|center_horizontal"
            android:paddingLeft="2dp"
            android:paddingRight="2dp"
            android:paddingTop="15dp">

            <Button
                android:id="@+id/spell_remove_wrong_button"
                style="@style/spell_button_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_span="4"
                android:maxLines="1"
                android:text="@string/spell_remove_wrong_answer" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow2"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:gravity="center|center_horizontal"
            android:paddingLeft="2dp"
            android:paddingRight="2dp"
            android:paddingTop="15dp">


            <Button
                android:id="@+id/tap2unfreeze"
                style="@style/spell_button_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_span="4"
                android:maxLines="1"
                android:text="@string/tap2unfreeze_label"
                android:visibility="gone" />

        </TableRow>
    </TableLayout>
</LinearLayout>